reading SMBIOS structure

--- a/Identy/CMakeLists.txt
+++ b/Identy/CMakeLists.txt
@@ -1,4 +1,4 @@
-﻿add_executable (Identy "Identy.cpp" "Identy.h" "Identy_hwid.cxx")
+﻿add_executable (Identy "Identy_hwid.cxx")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET Identy PROPERTY CXX_STANDARD 20)
