hashing, commpilation errors fixes, planned VM detection

--- a/Identy/CMakeLists.txt
+++ b/Identy/CMakeLists.txt
@@ -1,8 +1,7 @@
-﻿add_executable (Identy "Identy_hwid.cxx")
+﻿add_library(Identy "Identy_hwid.cxx" "Identy_vm.cxx" "Identy_hash.cxx" "Identy_io.cxx")
 
-if (CMAKE_VERSION VERSION_GREATER 3.12)
+if(CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET Identy PROPERTY CXX_STANDARD 20)
 endif()
 
 target_link_libraries(Identy advapi32)
-
