VM detection things

--- a/Identy/CMakeLists.txt
+++ b/Identy/CMakeLists.txt
@@ -4,4 +4,6 @@ if(CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET Identy PROPERTY CXX_STANDARD 20)
 endif()
 
-target_link_libraries(Identy advapi32)
+if(WIN32)
+target_link_libraries(Identy advapi32 iphlpapi)
+endif()
