fixes and improvements

--- a/Identy/CMakeLists.txt
+++ b/Identy/CMakeLists.txt
@@ -1,4 +1,4 @@
-﻿add_library(Identy "Identy_hwid.cxx" "Identy_vm.cxx" "Identy_hash.cxx" "Identy_io.cxx" "Identy_sha256.cxx")
+﻿add_library(Identy "Identy_hwid.cxx" "Identy_vm.cxx" "Identy_hash.cxx" "Identy_io.cxx" "Identy_sha256.cxx" "Identy_string.cxx")
 
 if(CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET Identy PROPERTY CXX_STANDARD 20)
