--- a/Identy/CMakeLists.txt
+++ b/Identy/CMakeLists.txt
@@ -1,14 +1,14 @@
-# Include platform-specific sources (sets IDENTY_PLATFORM_SOURCES variable)
+﻿# Include platform-specific sources (sets IDENTY_PLATFORM_SOURCES variable)
 add_subdirectory(Platform)
 
 add_library(Identy
-    "Identy_hwid.cxx"
-    "Identy_vm.cxx"
-    "Identy_hash.cxx"
-    "Identy_io.cxx"
-    "Identy_sha256.cxx"
-    "Identy_string.cxx"
-    ${IDENTY_PLATFORM_SOURCES}
+  "Identy_hwid.cxx"
+  "Identy_vm.cxx"
+  "Identy_hash.cxx"
+  "Identy_io.cxx"
+  "Identy_sha256.cxx"
+  "Identy_string.cxx"
+  ${IDENTY_PLATFORM_SOURCES}
 )
 
 if(CMAKE_VERSION VERSION_GREATER 3.12)
@@ -17,9 +17,9 @@ endif()
 
 # Указываем, где искать заголовочные файлы библиотеки
 target_include_directories(Identy PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 )
 
 if(WIN32)
-    target_link_libraries(Identy advapi32 iphlpapi)
+  target_link_libraries(Identy advapi32 iphlpapi)
 endif()
