optimized VM detection code working with strings, also refactored

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,5 +58,8 @@
         "ratio": "cpp",
         "xlocbuf": "cpp",
         "xlocmes": "cpp"
-    }
+    },
+    "C_Cpp.default.compileCommands": [
+        "${workspaceFolder}/build/"
+    ]
 }
