--- a/Identy/Platform/CMakeLists.txt
+++ b/Identy/Platform/CMakeLists.txt
@@ -5,11 +5,13 @@
 if(WIN32)
     set(IDENTY_PLATFORM_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/Identy_hwid_pltimpl_windows.cxx
+        ${CMAKE_CURRENT_SOURCE_DIR}/Identy_vm_pltimpl_windows.cxx
         PARENT_SCOPE
     )
 elseif(UNIX AND NOT APPLE)
     set(IDENTY_PLATFORM_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/Identy_hwid_pltimpl_linux.cxx
+        ${CMAKE_CURRENT_SOURCE_DIR}/Identy_vm_pltimpl_linux.cxx
         PARENT_SCOPE
     )
 endif()
