--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,8 +53,8 @@ jobs:
       fail-fast: false
       matrix:
         compiler:
-          - { cc: gcc-12, cxx: g++-12 }
-          - { cc: clang-15, cxx: clang++-15 }
+          - { cc: gcc-14, cxx: g++-14, stdlib: "" }
+          - { cc: clang-18, cxx: clang++-18, stdlib: "libc++" }
 
     name: Linux (${{ matrix.compiler.cxx }})
 
@@ -68,7 +68,7 @@ jobs:
           if [[ "${{ matrix.compiler.cc }}" == gcc* ]]; then
             sudo apt-get install -y ${{ matrix.compiler.cc }} ${{ matrix.compiler.cxx }}
           else
-            sudo apt-get install -y ${{ matrix.compiler.cc }} ${{ matrix.compiler.cxx }}
+            sudo apt-get install -y ${{ matrix.compiler.cc }} ${{ matrix.compiler.cxx }} libc++-18-dev libc++abi-18-dev
           fi
 
       - name: Configure CMake
@@ -76,10 +76,15 @@ jobs:
           CC: ${{ matrix.compiler.cc }}
           CXX: ${{ matrix.compiler.cxx }}
         run: |
+          CMAKE_EXTRA_FLAGS=""
+          if [[ -n "${{ matrix.compiler.stdlib }}" ]]; then
+            CMAKE_EXTRA_FLAGS="-DCMAKE_CXX_FLAGS=-stdlib=${{ matrix.compiler.stdlib }}"
+          fi
           cmake -B build \
             -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} \
             -DIDENTY_BUILD_TESTS=ON \
-            -DIDENTY_TEST_EXPECT_VM=ON
+            -DIDENTY_TEST_EXPECT_VM=ON \
+            $CMAKE_EXTRA_FLAGS
 
       - name: Build
         run: cmake --build build --config ${{ env.BUILD_TYPE }} -j $(nproc)
